fix : text-home-projects with txt-wrap and panel-txt width38vw

--- a/public/chloe/styles/_home-projects.scss
+++ b/public/chloe/styles/_home-projects.scss
@@ -24,14 +24,14 @@
   .text-wrap {
     position: relative;
     overflow: hidden;
-    width: 800px;
+    width: 38vw;
     height: 110vh;
     margin-bottom: 60vh;
     margin-left: 20vw;
 
     .panel-text {
       position: absolute;
-      width: 800px;
+      width: 38vw;
       height: 100%;
       color: $standardTextColor;
 
